--- a/.github/workflows/main_ccs-server.yml
+++ b/.github/workflows/main_ccs-server.yml
@@ -24,4 +24,4 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm start
+          node index.js
