--- a/.github/workflows/main_ccs-server.yml
+++ b/.github/workflows/main_ccs-server.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - ccs-server
 
 on:
@@ -25,3 +22,11 @@ jobs:
         run: |
           npm install
           node index.js
+
+      - name: Deploy to Azure Web App
+        uses: Azure/webapps-deploy@v2
+        with:
+          app-name: 'ccs-server'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B5312AF3F4DD4139AC3EE82EA55567BE }}
+          package: .
