--- a/.github/workflows/main_ccs-server.yml
+++ b/.github/workflows/main_ccs-server.yml
@@ -22,7 +22,8 @@ jobs:
         run: |
           npm install
           npm install -g nodemon
-          npm run serve
+          npm install pm2@latest -g
+          pm2 start index.js
 
       - name: Deploy to Azure Web App
         uses: Azure/webapps-deploy@v2
