--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon server.js",
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "author": "Garv Chhokra",
   "license": "ISC",
